--- a/templates/program.html
+++ b/templates/program.html
@@ -29,7 +29,7 @@
                         <a data-toggle="collapse" href="#snippet_{{ Program.get_init.get_id }}_wrapper"><h4>Init method</h4></a>
                         <div class="form-group collapse ace-wrapper" id="snippet_{{ Program.get_init.get_id }}_wrapper">
                             <input type="text" class="form-control" name="name" value="{{ Program.get_init.get_name }}" style="background-color: rgb(39, 40, 34); color: #f7f7f7;">
-                            <div class="resizable resizable_snippet_{{ Program.get_init.get_id }}"><div id="snippet_{{ Program.get_init.get_id }}" class="form-control ace_editor snippet" data-mode="javascript">{{ Program.get_init.get_code|raw }}</div></div>
+                            <div class="resizable resizable_snippet_{{ Program.get_init.get_id }}"><div id="snippet_{{ Program.get_init.get_id }}" class="form-control ace_editor snippet" data-mode="javascript"></div></div>
                             <a href="#" class="btn btn-default save-snippet save" data-id="{{ Program.get_init.get_id }}">{% _"save" %} (Ctrl-S)</a>
                             <a href="#" class="btn btn-default preview-snippet preview">{% _"preview" %} (Ctrl-D)</a>
                         </div>
@@ -40,9 +40,22 @@
                         <a data-toggle="collapse" href="#snippet_{{ Program.get_render.get_id }}_wrapper"><h4>Render method</h4></a>
                         <div class="form-group collapse ace-wrapper" id="snippet_{{ Program.get_render.get_id }}_wrapper">
                             <input type="text" class="form-control" name="name" value="{{ Program.get_render.get_name }}" style="background-color: rgb(39, 40, 34); color: #f7f7f7;">
-                            <div class="resizable resizable_snippet_{{ Program.get_render.get_id }}"><div id="snippet_{{ Program.get_render.get_id }}" class="form-control ace_editor snippet" data-mode="javascript">{{ Program.get_render.get_code|raw }}</div></div>
+                            <div class="resizable resizable_snippet_{{ Program.get_render.get_id }}"><div id="snippet_{{ Program.get_render.get_id }}" class="form-control ace_editor snippet" data-mode="javascript"></div></div>
                             <a href="#" class="btn btn-default save-snippet save" data-id="{{ Program.get_render.get_id }}">{% _"save" %} (Ctrl-S)</a>
                             <a href="#" class="btn btn-default preview-snippet preview">{% _"preview" %} (Ctrl-D)</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <div class="well">
+                        <a data-toggle="collapse" href="#renderpasses"><h4>Renderpasses</h4></a>
+                        <div class="renderpasses collapse" id="renderpasses">
+                            {% for renderPass in Program.get_render_passes %}
+                            {% include "_include/_render_pass.html" %}
+                            {% endfor %}
+                            <p>
+                                <a href="#" class="btn btn-default" id="add-render-pass" data-program-id="{{ Program.get_id }}">Add Render Pass</a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -52,9 +65,9 @@
                         <div class="form-group ace-wrapper collapse in" id="shader_{{ Program.get_material.get_id }}_wrapper">
                             <input type="text" class="form-control" name="name" value="{{ Program.get_material.get_name }}" style="background-color: rgb(39, 40, 34); color: #f7f7f7;">
                             <label for="snippet_{{ Program.get_material.get_vertex_id }}">Vertex</label>
-                            <div class="resizable resizable_snippet_{{ Program.get_material.get_vertex_id }}"><div id="snippet_{{ Program.get_material.get_vertex_id }}" class="form-control ace_editor vertex" data-mode="glsl">{{ Program.get_material.get_vertex.get_code|raw }}</div></div>
+                            <div class="resizable resizable_snippet_{{ Program.get_material.get_vertex_id }}"><div id="snippet_{{ Program.get_material.get_vertex_id }}" class="form-control ace_editor vertex" data-mode="glsl"></div></div>
                             <label for="snippet_{{ Program.get_material.get_vertex_id }}">Fragment</label>
-                            <div class="resizable resizable_snippet_{{ Program.get_material.get_fragment_id }}"><div id="snippet_{{ Program.get_material.get_fragment_id }}" class="form-control ace_editor fragment" data-mode="glsl">{{ Program.get_material.get_fragment.get_code|raw }}</div></div>
+                            <div class="resizable resizable_snippet_{{ Program.get_material.get_fragment_id }}"><div id="snippet_{{ Program.get_material.get_fragment_id }}" class="form-control ace_editor fragment" data-mode="glsl"></div></div>
                             <a href="#" class="btn btn-default save-shader save" data-id="{{ Program.get_material.get_id }}">{% _"save" %} (Ctrl-S)</a>
                             <a href="#" class="btn btn-default preview-shader preview">{% _"preview" %} (Ctrl-D)</a>
                         </div>
@@ -82,7 +95,7 @@
 
         var camera, renderer, depthRenderer, composer, normalTexture, depthTexture;
 
-        var renderPasses = []
+        var renderPasses = [];
         var shaderPasses = [];
         {% for shaderPass in Program.get_shader_passes %}
             shaderPasses.push({'id': '{{ shaderPass.get_id }}', 'vertex_id': '{{ shaderPass.get_shader.get_vertex_id }}','fragment_id': '{{ shaderPass.get_shader.get_fragment_id }}'});
@@ -94,20 +107,32 @@
 
         var editors = {};
         var snippets = {};
-        function init() {
-
+        var program_id = {{ Program.get_id }};
+        var render_id = {{ Program.get_render.get_id }};
+        var init_id = {{ Program.get_init.get_id }};
+        function initOnce() {
             container = document.getElementById( 'render_plane' );
-
-            container.innerHTML = '';
 
             camera = new THREE.PerspectiveCamera( 40, (window.innerWidth/2) / window.innerHeight, 1, 3000 );
             camera.position.z = 3;
-            renderPasses = [];
             renderPasses.push({'scene': new THREE.Scene(), 'material': new THREE.ShaderMaterial({
                 uniforms: {},
                 vertexShader: snippets[{{ Program.get_material.get_vertex.get_id }}],/* vertex_shader */
                 fragmentShader: snippets[{{ Program.get_material.get_fragment.get_id }}]/* fragment_shader */
             }), 'render_target': null, 'texture_name': 'tDiffuse'});
+            {% for renderPass in Program.get_render_passes %}
+                renderPasses.push({
+                    'id': '{{ renderPass.get_id }}',
+                    'scene': new THREE.Scene(),
+                    'material': new THREE.ShaderMaterial({
+                        uniforms: {},
+                        vertexShader: snippets[{{ renderPass.get_shader.get_vertex_id }}],/* vertex_shader */
+                        fragmentShader: snippets[{{ renderPass.get_shader.get_fragment_id }}]/* fragment_shader */
+                    }),
+                    'render_target': new THREE.WebGLRenderTarget( window.innerWidth/2, window.innerHeight, { minFilter: THREE.LinearFilter, magFilter: THREE.NearestFilter, format: THREE.RGBFormat } ),
+                    'texture_name': '{{ renderPass.get_texture_name }}'
+            });
+            {% endfor %}
 
             renderPasses.push({'scene': new THREE.Scene(), 'material': new THREE.ShaderMaterial( {
                 uniforms: {},
@@ -138,8 +163,28 @@
                     "}"].join('\n')
             }), 'render_target': new THREE.WebGLRenderTarget( window.innerWidth/2, window.innerHeight, { minFilter: THREE.LinearFilter, magFilter: THREE.NearestFilter, format: THREE.RGBFormat } ), 'texture_name': 'tDepth'});
 
+
+            snippets[{{ Program.get_render.get_id }}] = `{{ Program.get_render.get_code|raw }}`;
+            snippets[{{ Program.get_init.get_id }}] = `{{ Program.get_init.get_code|raw }}`;
+            snippets[{{ Program.get_material.get_vertex.get_id }}] = `{{ Program.get_material.get_vertex.get_code|raw }}`;
+            snippets[{{ Program.get_material.get_fragment.get_id }}] = `{{ Program.get_material.get_fragment.get_code|raw }}`;
+            {% for shaderPass in Program.get_shader_passes %}
+                snippets[{{ shaderPass.get_shader.get_vertex_id }}] = `{{ shaderPass.get_shader.get_vertex.get_code|raw }}`;
+            snippets[{{ shaderPass.get_shader.get_fragment_id }}] = `{{ shaderPass.get_shader.get_fragment.get_code|raw }}`;
+            {% endfor %}
+            {% for renderPass in Program.get_render_passes %}
+                snippets[{{ renderPass.get_shader.get_vertex_id }}] = `{{ renderPass.get_shader.get_vertex.get_code|raw }}`;
+            snippets[{{ renderPass.get_shader.get_fragment_id }}] = `{{ renderPass.get_shader.get_fragment.get_code|raw }}`;
+            {% endfor %}
+        }
+
+        function init() {
+
+            container = document.getElementById( 'render_plane' );
+            container.innerHTML = '';
+
             /* START PROGRAM INIT PART */
-            eval(snippets[{{ Program.get_init.get_id }}]);
+            eval(snippets[init_id]);
             /* END PROGRAM INIT PART */
 
             uniforms.resolution = { type: "v2", value: new THREE.Vector2() };
@@ -153,6 +198,7 @@
 
             for (var i=0; i < renderPasses.length; i++) {
                 uniforms[renderPasses[i].texture_name] = { type: "t", value: renderPasses[i].render_target };
+                console.log(renderPasses[i].texture_name);
             }
 
             for (var i=0; i < renderPasses.length; i++) {
@@ -179,6 +225,7 @@
             }
 
             for (var i=0; i < renderPasses.length; i++) {
+                renderPasses[i].scene = new THREE.Scene();
                 renderPasses[i].scene.add(new THREE.Mesh( geometry, renderPasses[i].material ));
             }
 
@@ -187,8 +234,6 @@
             renderer.setClearColor( 0x000000, 1);
             renderer.setSize( window.innerWidth/2, window.innerHeight );
             container.appendChild( renderer.domElement );
-
-
 
             onWindowResize();
 
@@ -234,7 +279,7 @@
             uniforms.time.value += delta * 5;
 
             /* START PROGRAM RENDER PART */
-            eval(snippets[{{ Program.get_render.get_id }}]);
+            eval(snippets[render_id]);
             /* END PROGRAM RENDER PART */
 
             for (var i=1; i < renderPasses.length; i++) {
@@ -243,35 +288,6 @@
 
             composer.render();
         }
-
-        snippets[{{ Program.get_render.get_id }}] = `
-        {{ Program.get_render.get_code|raw }}
-        `;
-        snippets[{{ Program.get_init.get_id }}] = `
-        {{ Program.get_init.get_code|raw }}
-        `;
-        snippets[{{ Program.get_material.get_vertex.get_id }}] = `
-        {{ Program.get_material.get_vertex.get_code|raw }}
-        `;
-        snippets[{{ Program.get_material.get_fragment.get_id }}] = `
-        {{ Program.get_material.get_fragment.get_code|raw }}
-        `;
-        {% for shaderPass in Program.get_shader_passes %}
-            snippets[{{ shaderPass.get_shader.get_vertex_id }}] = `
-        {{ shaderPass.get_shader.get_vertex.get_code|raw }}
-        `;
-        snippets[{{ shaderPass.get_shader.get_fragment_id }}] = `
-        {{ shaderPass.get_shader.get_fragment.get_code|raw }}
-        `;
-        {% endfor %}
-        $(document).ready(function() {
-            try {
-                init();
-                animate();
-            } catch (Exception) {
-
-            }
-        });
 
     </script>
 </div>
