--- a/templates/__base.html
+++ b/templates/__base.html
@@ -35,6 +35,7 @@
     <script src="/static/js/postprocessing/RenderPass.js"></script>
     <script src="/static/js/postprocessing/MaskPass.js"></script>
     <script src="/static/js/postprocessing/ShaderPass.js"></script>
+    <script src="/static/js/loaders/OBJLoader.js"></script>
 
 </head>
 <body data-lare-namespace="{{ lare_current_namespace }}">
